--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="author" content="CapiCode">
+    <meta property="og:description"
+        content="Actuellement étudiant en formation de Technicien Développeur axé sur la conception web design et intégration de sites web. Etant assoiffé de connaissances et de nouvelles technologies de manière générale, je passe la majorité partie de mon temps libre à décupler mes compétences via des projets personnel et collaboratifs. Tombé par hasard dans l'univers du code, j'ai commencé par créer des morceaux de codes par curiosité, aujourd'hui je réalise avec passion de fines créations pour donner vie à mes idées. J'adore apprendre de mon côté, de façon à rester en veille permanente.">
     <meta name="description" content="CapiCode - Portfolio">
     <meta property="og:title" content="CapiCode - Portfolio">
     <title>CapiCode</title>
@@ -51,13 +53,13 @@
     <section class="home">
         <nav>
             <div class="navigation">
-                <a href="#home" class="fade logo" id="link-home">< CapiCode /></a>
+                <a href="#home" class="fade logo" id="link-home">
+                    < CapiCode /></a>
                 <div class="navigation__items">
                     <a href="#about" class="bord fadet" id="link-about">A propos</a>
                     <a href="#skill" class="bord fadet" id="link-skill">Compétences</a>
                     <a href="#projects" class="bord fadet" id="link-project">Projets</a>
                     <a href="#contact" class="bord fadet" id="link-contact">Contact</a>
-                    <!-- <a class="toggle-nav"><i class="fa fa-bars"></i></a> -->
                 </div>
             </div>
         </nav>
@@ -237,7 +239,7 @@
     <div id="preloader">
         <img src="img/loadreb.svg" alt="">
     </div>
-    
+
     <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.10/typed.min.js"></script>
     <script defer src="js/app.js"></script>
     <script defer src="js/scroll.js"></script>
