Start writing the readme

--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
 
         <div class="project__portfolio">
             <div class="project__illustration">
-                <img src="img/project/portfolio-min.png" alt="">
+                <img src="img/portfolio-min.png" alt="">
             </div>
             <div class="project__content">
                 <h3>Portfolio</h3>
