--- a/index.html
+++ b/index.html
@@ -235,15 +235,15 @@
         <p>Tous droits réservés | © 2020 | CapiCode 👻</p>
     </footer>
 
-    <div id="overlay"></div>
+    <!-- <div id="overlay"></div>
     <div id="preloader">
         <img src="img/loadreb.svg" alt="">
-    </div>
+    </div> -->
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.10/typed.min.js"></script>
-    <script defer src="js/app.js"></script>
+    <!-- <script defer src="js/app.js"></script> -->
     <script defer src="js/scroll.js"></script>
-    <script defer src="js/load.js"></script>
+    <!-- <script defer src="js/load.js"></script> -->
     <script defer src="js/typewriter.js"></script>
 </body>
 
