--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
                     <p class="highlith-stack">PHP</p>
                 </div>
                 <div class="project__box--link">
-                    <a href="">
+                    <a href="#project">
                         <img src="img/project/load.svg" class="icon-merge" alt="Source">
                         <span>En cours ⇢</span>
                     </a>
@@ -179,7 +179,7 @@
                     <p class="highlith-stack">PHP</p>
                 </div>
                 <div class="project__box--link">
-                    <a href="">
+                    <a href="#project">
                         <img src="img/project/load.svg" class="icon-merge" alt="Source">
                         <span>En cours ⇢</span>
                     </a>
