Change animation btn-top

--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
         </div>
     </section>
     <button id="btn-top">
-        <div class="index"><img src="img/index.png" class="fas fa-angle-double-up logo-animated"></img></div>
+        <div class="index"><img src="img/index.png" class="fas fa-angle-double-up btn-animate"></img></div>
     </button>
     <footer>
         <p>Tous droits réservés | © <span id="year"></span> | CapiCode 👻</p>
