--- a/index.html
+++ b/index.html
@@ -46,10 +46,10 @@
                 <a href="#home" class="fade logo" id="link-home">
                     < CapiCode /></a>
                 <div class="navigation__items">
-                    <a href="#about"    data-target="about" class="bord fadet" id="link-about">A propos</a>
-                    <a href="#skill"    data-target="skill" class="bord fadet" id="link-skill">Compétences</a>
-                    <a href="#project" data-target="project" class="bord fadet" id="link-project">Projets</a>
-                    <a href="#"         data-target="contact" class="bord fadet btn-scroll-into" id="link-contact">Contact</a>
+                    <a href="#about"    class="bord fadet" id="link-about">A propos</a>
+                    <a href="#skill"    class="bord fadet" id="link-skill">Compétences</a>
+                    <a href="#project"  class="bord fadet" id="link-project">Projets</a>
+                    <a href="#contact"  class="bord fadet" id="link-contact">Contact</a>
                 </div>
             </div>
         </nav>
