--- a/index.html
+++ b/index.html
@@ -6,15 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="author" content="CapiCode">
-    <meta property="og:description"
-        content="Actuellement étudiant en formation de Technicien Développeur axé sur la conception web design et intégration de sites web. Etant assoiffé de connaissances et de nouvelles technologies de manière générale, je passe la majorité partie de mon temps libre à décupler mes compétences via des projets personnel et collaboratifs. Tombé par hasard dans l'univers du code, j'ai commencé par créer des morceaux de codes par curiosité, aujourd'hui je réalise avec passion de fines créations pour donner vie à mes idées. J'adore apprendre de mon côté, de façon à rester en veille permanente.">
     <meta name="description" content="CapiCode - Portfolio">
+    <meta property="og:description"
+        content="Actuellement étudiant en formation de Technicien Développeur axé sur la conception web design et intégration de sites web.">
     <meta property="og:title" content="CapiCode - Portfolio">
-    <title>CapiCode</title>
+    <meta property="og:image" content="https://capicode.github.io/img/project/funny.PNG">
+    <meta property="og:url" content="https://capicode.github.io/">
     <link rel="shortcut icon" type="image/x-icon" href="img/favicon.ico">
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/mq.css">
+    <title>CapiCode</title>
 </head>
 
 <body>
@@ -43,13 +45,12 @@
     <section class="home">
         <nav>
             <div class="navigation">
-                <a href="#home" class="fade logo" id="link-home">
-                    < CapiCode /></a>
+                <a href="#home" class="fade logo" id="link-home">< CapiCode /></a>
                 <div class="navigation__items">
-                    <a href="#about"    class="bord fadet" id="link-about">A propos</a>
-                    <a href="#skill"    class="bord fadet" id="link-skill">Compétences</a>
-                    <a href="#project"  class="bord fadet" id="link-project">Projets</a>
-                    <a href="#contact"  class="bord fadet" id="link-contact">Contact</a>
+                    <a href="#about"    class="bord fadet">A propos</a>
+                    <a href="#skill"    class="bord fadet">Compétences</a>
+                    <a href="#project"  class="bord fadet">Projets</a>
+                    <a href="#contact"  class="bord fadet">Contact</a>
                 </div>
             </div>
         </nav>
@@ -57,7 +58,7 @@
             <h1>Bienvenue sur mon portfolio<img src="img/hand.png" class="viber" alt="Hand"></h1>
         </div>
         <div class="hero-icon appearingArrow">
-            <a href="#link-about" id="arrow"><span></span>Cliquez pour défiler</a>
+            <a href="#about" id="arrow"><span></span>Cliquez pour défiler</a>
         </div>
 
     </section>
@@ -154,7 +155,7 @@
         </div>
         <div class="project__portfolio">
             <div class="project__illustration">
-                <img src="img/project/funnyrecipes-min.PNG" alt="">
+                <img src="img/project/funny.PNG" alt="">
             </div>
             <div class="project__content">
                 <h3>Drôle de recettes</h3>
