--- a/index.html
+++ b/index.html
@@ -55,12 +55,11 @@
             </div>
         </nav>
         <div class="hero-text animated" id="hero-text">
-            <h1>Bienvenue sur mon portfolio<img src="img/hand.png" class="viber" alt="Hand"></h1>
+            <h1>Bienvenue<img src="img/hand.png" class="viber" alt="Hand"></h1>
         </div>
         <div class="hero-icon appearingArrow">
-            <a href="#about" id="arrow"><span></span>Cliquez pour défiler</a>
+            <a href="#about" id="arrow"><span></span></a>
         </div>
-
     </section>
     <section class="about" id="about">
         <div class="about__illustration">
@@ -69,35 +68,33 @@
         <div class="about__content">
             <div>
                 <h1>Je suis <span class="high">CapiCode</span>
-                    <span class="" id="row"></span></h1>
+                    <span id="row"></span>👻</h1>
             </div>
             <div>
                 <p>
-                    Actuellement étudiant en formation de <span class="highlith">Technicien
-                        Développeur</span> axé sur la <span class="highlith">conception web design</span> et
-                    <span class="highlith">intégration de sites web</span>.
-                    Etant assoiffé de connaissances et de nouvelles technologies de
-                    manière générale, je passe la majorité partie de mon temps libre à décupler mes compétences via des
-                    projets personnel et collaboratifs.
                     Tombé par hasard dans <span class="highlith">l'univers du code</span>, j'ai commencé par créer
                     des morceaux de codes par curiosité,
-                    aujourd'hui je réalise avec passion de <span class="highlith">fines créations</span> pour donner
+                    aujourd'hui je réalise avec passion de <span class="highlith">petites créations</span> pour donner
                     vie à mes idées.
-                    J'adore <span class="highlith">apprendre</span> de mon côté, de façon à rester en <span
+                    Actuellement, je suis en formation de <span class="highlith">Technicien
+                        Développeur</span> axé sur le <span class="highlith">développement web, mobile</span> et la
+                    <span class="highlith">gestion de projets</span>.
+                    Passionné par le web, j'aime régulièrement <span class="highlith">apprendre</span> de nouvelles choses, de façon à rester en <span
                         class="highlith">veille permanente</span>.
+                    
                 </p>
             </div>
             <div class="about__box-social">
                 <div>
                     <a href="https://github.com/CapiCode" target="_blank" class="logo-animated">
-                        <img src="img/github.svg" alt="">
+                        <img src="img/github.svg" alt="Github">
                         <span class="desc-github">Github</span>
                     </a>
                 </div>
                 <div>
                     <a href="https://www.linkedin.com/in/giovanni-charles-edouard-a15337179" target="_blank"
                         class="logo-animated">
-                        <img src="img/linkedin.svg" alt="">
+                        <img src="img/linkedin.svg" alt="LinkedIn">
                         <span class="desc-linkedin">LinkedIn</span>
                     </a>
                 </div>
@@ -106,6 +103,7 @@
                 <a href="cv/CV_Giovanni_CHARLES-EDOUARD.pdf" target="_blank">Voir mon CV ⇢</a>
                 <a href="#" id="see-project">Consultez mes projets ⇢</a>
             </div>
+            
         </div>
     </section>
     <section class="skill" id="skill">
@@ -134,11 +132,11 @@
     <section class="project" id="project">
         <div class="project__portfolio">
             <div class="project__illustration">
-                <img src="img/project/chat.JPG" alt="">
+                <img src="img/project/chat.JPG" alt="Chat en ligne">
             </div>
             <div class="project__content">
                 <h3>Chat</h3>
-                <p class="desc">Chat permet de discuter en ligne avec des utilisateurs via divers salons.</p>
+                <p class="desc">Conception en cours d'un chat permettant de discuter en ligne avec des utilisateurs via divers salons.</p>
                 <div class="project__box--stack">
                     <p class="highlith-stack">HTML</p>
                     <p class="highlith-stack">CSS</p>
@@ -155,7 +153,7 @@
         </div>
         <div class="project__portfolio">
             <div class="project__illustration">
-                <img src="img/project/funny.PNG" alt="">
+                <img src="img/project/funny.PNG" alt="Drôle de recette">
             </div>
             <div class="project__content">
                 <h3>Drôle de recettes</h3>
@@ -180,7 +178,7 @@
 
         <div class="project__portfolio">
             <div class="project__illustration">
-                <img src="img/portfolio-min.png" alt="">
+                <img src="img/portfolio-min.png" alt="Website Personnel">
             </div>
             <div class="project__content">
                 <h3>Portfolio</h3>
@@ -218,11 +216,11 @@
             </div>
         </div>
         <div class="contact__illustration">
-            <img src="img/contact/as.svg" alt="">
+            <img src="img/contact/as.svg" alt="Illustration contact">
         </div>
     </section>
     <button id="btn-top">
-        <div class="index"><img src="img/index.png" class="fas fa-angle-double-up btn-animate"></img></div>
+        <div class="index"><img src="img/index.png" class="fas fa-angle-double-up btn-animate" alt="Finger"></img></div>
     </button>
     <footer>
         <p>CapiCode 👻 <span id="year"></span></p>
@@ -231,7 +229,6 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.10/typed.min.js"></script>
     <script defer src="js/scroll.js"></script>
     <script defer src="js/year.js"></script>
-    <script defer src="js/typewriter.js"></script>
 </body>
 
 </html>
