--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             </div>
         </nav>
         <div class="hero-text animated" id="hero-text">
-            <h1>Bienvenue<img src="img/hand.png" class="viber" alt="Hand"></h1>
+            <h1>Bienvenue<img src="img/hand.png" class="viber" alt="Icône de main"></h1>
         </div>
         <div class="hero-icon appearingArrow">
             <a href="#about" id="arrow"><span></span></a>
@@ -63,7 +63,7 @@
     </section>
     <section class="about" id="about">
         <div class="about__illustration">
-            <img src="img/online.svg" alt="illustration">
+            <img src="img/online.svg" alt="illustration Section A propos">
         </div>
         <div class="about__content">
             <div>
@@ -87,14 +87,14 @@
             <div class="about__box-social">
                 <div>
                     <a href="https://github.com/CapiCode" target="_blank" class="logo-animated">
-                        <img src="img/github.svg" alt="Github">
+                        <img src="img/github.svg" alt="Icône Github">
                         <span class="desc-github">Github</span>
                     </a>
                 </div>
                 <div>
                     <a href="https://www.linkedin.com/in/giovanni-charles-edouard-a15337179" target="_blank"
                         class="logo-animated">
-                        <img src="img/linkedin.svg" alt="LinkedIn">
+                        <img src="img/linkedin.svg" alt="Icône LinkedIn">
                         <span class="desc-linkedin">LinkedIn</span>
                     </a>
                 </div>
@@ -132,7 +132,7 @@
     <section class="project" id="project">
         <div class="project__portfolio">
             <div class="project__illustration">
-                <img src="img/project/chat.JPG" alt="Chat en ligne">
+                <img src="img/project/chat.JPG" alt="Site de chat en ligne">
             </div>
             <div class="project__content">
                 <h3>Chat</h3>
@@ -153,7 +153,7 @@
         </div>
         <div class="project__portfolio">
             <div class="project__illustration">
-                <img src="img/project/funny.PNG" alt="Drôle de recette">
+                <img src="img/project/funny.PNG" alt="Site de recette de cuisine">
             </div>
             <div class="project__content">
                 <h3>Drôle de recettes</h3>
@@ -178,7 +178,7 @@
 
         <div class="project__portfolio">
             <div class="project__illustration">
-                <img src="img/portfolio-min.png" alt="Website Personnel">
+                <img src="img/portfolio-min.png" alt="Site Personnel">
             </div>
             <div class="project__content">
                 <h3>Portfolio</h3>
@@ -216,11 +216,11 @@
             </div>
         </div>
         <div class="contact__illustration">
-            <img src="img/contact/as.svg" alt="Illustration contact">
+            <img src="img/contact/as.svg" alt="Illustration Section Contact">
         </div>
     </section>
     <button id="btn-top">
-        <div class="index"><img src="img/index.png" class="fas fa-angle-double-up btn-animate" alt="Finger"></img></div>
+        <div class="index"><img src="img/index.png" class="fas fa-angle-double-up btn-animate" alt="Icône Doigt levé"></img></div>
     </button>
     <footer>
         <p>CapiCode 👻 <span id="year"></span></p>
