--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
             </div>
         </div>
         <div class="project-icon appearingArrow">
-            <a href="#contact" id="arrow-contact"><span></span></a>
+            <a href="#footer" id="arrow-contact"><span></span></a>
         </div>
     </section>
     <section class="contact" id="contact">
