--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     </section>
     <section class="about" id="about">
         <div class="about__illustration">
-            <img src="img/online.svg" alt="illustration Section A propos">
+            <img src="img//about/about.svg" alt="illustration Section A propos">
         </div>
         <div class="about__content">
                 <h1>👻A Propos de moi <span id="row"></span></h1>
@@ -61,13 +61,13 @@
             <div class="about__box-social">
                 <div>
                     <a href="https://github.com/CapiCode" target="_blank" class="logo-animated">
-                        <img src="img/github2.png" alt="Icône Github">
+                        <img src="img/github-wh.png" alt="Icône Github">
                     </a>
                 </div>
                 <div>
                     <a href="https://www.linkedin.com/in/giovanni-charles-edouard-a15337179" target="_blank"
                         class="logo-animated">
-                        <img src="img/linkedin.png" alt="Icône LinkedIn">
+                        <img src="img/linkedin-wh.png" alt="Icône LinkedIn">
                     </a>
                 </div>
             </div>
@@ -123,7 +123,7 @@
                 </div>
                 <div class="project__box--link">
                     <a href="#project">
-                        <img src="img/project/loading.png" class="icon-merge" alt="Source">
+                        <img src="img/project/development-wh.png" class="icon-merge" alt="En cours de développement">
                         <span>En cours ⇢</span>
                     </a>
                 </div>
@@ -131,7 +131,7 @@
         </div>
         <div class="project__portfolio">
             <div class="project__illustration">
-                <img src="img/project/funny.PNG" alt="Site de recette de cuisine">
+                <img src="img/project/drôle-de-recette.PNG" alt="Site de recette de cuisine">
             </div>
             <div class="project__content">
                 <h3>Drôle de recettes</h3>
@@ -147,7 +147,7 @@
                 </div>
                 <div class="project__box--link">
                     <a href="#project">
-                        <img src="img/project/loading.png" class="icon-merge" alt="Source">
+                        <img src="img/project/development-wh.png" class="icon-merge" alt="En cours de développement">
                         <span>En cours ⇢</span>
                     </a>
                 </div>
@@ -156,7 +156,7 @@
 
         <div class="project__portfolio">
             <div class="project__illustration">
-                <img src="img/portfolio-min.png" alt="Site Personnel">
+                <img src="img//project/portfolio.png" alt="Site Personnel">
             </div>
             <div class="project__content">
                 <h3>Portfolio</h3>
@@ -172,7 +172,7 @@
                 </div>
                 <div class="project__box--link">
                     <a href="https://github.com/CapiCode/capicode.github.io" target="_blank">
-                        <img src="img/project/source.png" class="icon-merge" alt="Source">
+                        <img src="img/project/source-wh.png" class="icon-merge" alt="Source">
                         <span>Voir la Source ⇢</span>
                     </a>
                 </div>
@@ -201,7 +201,7 @@
         </div>
     </section>
     <button id="btn-top">
-        <div class="index"><img src="img/index.png" class="fas fa-angle-double-up btn-animate" alt="Icône Doigt levé"></img></div>
+        <div class="index"><img src="img/finger.png" class="fas fa-angle-double-up btn-animate" alt="Icône Doigt levé"></img></div>
     </button>
     <footer id="footer">
         <p>CapiCode 🧪 <span id="year"></span></p>
