--- a/index.html
+++ b/index.html
@@ -60,13 +60,13 @@
             </div>
             <div class="about__box-social">
                 <div>
-                    <a href="https://github.com/CapiCode" target="_blank" class="logo-animated">
+                    <a href="https://github.com/CapiCode" target="_blank" class="logo-animated" rel="noopener">
                         <img src="img/github-wh.png" alt="Icône Github">
                     </a>
                 </div>
                 <div>
                     <a href="https://www.linkedin.com/in/giovanni-charles-edouard-a15337179" target="_blank"
-                        class="logo-animated">
+                        class="logo-animated" rel="noopener">
                         <img src="img/linkedin-wh.png" alt="Icône LinkedIn">
                     </a>
                 </div>
