--- a/index.html
+++ b/index.html
@@ -8,9 +8,10 @@
     <meta name="author" content="CapiCode">
     <meta name="description" content="CapiCode - Portfolio ">
     <meta property="og:description"
-        content="Actuellement étudiant en formation de Technicien Développeur axé sur la conception web design et intégration de sites web.">
+        content="Actuellement étudiant en formation de Technicien Développeur axé sur le développement web, mobile et la
+        gestion de projets.">
     <meta property="og:title" content="CapiCode - Portfolio ">
-    <meta property="og:image" content="https://capicode.github.io/img/project/funny.PNG">
+    <meta property="og:image" content="https://capicode.github.io/img/project/portfolio.png">
     <meta property="og:url" content="https://capicode.github.io/">
     <link rel="shortcut icon" type="image/x-icon" href="img/favicon.ico">
     <link rel="stylesheet" href="css/reset.css">
@@ -51,7 +52,7 @@
                     des morceaux de codes par curiosité,
                     aujourd'hui je réalise avec passion de petites créations pour donner
                     vie à mes idées.
-                    Actuellement, je suis en formation deTechnicien
+                    Actuellement, je suis en formation de Technicien
                         Développeur axé sur le développement web, mobile et la
                     gestion de projets.
                     Passionné par le web, j'aime régulièrement apprendre de nouvelles choses, de façon à rester en veille permanente.
